--- a/Reviews.html
+++ b/Reviews.html
@@ -4,7 +4,7 @@
       <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <link rel="stylesheet" href="/styles/15 Projects/Reviews.css">
+          <link rel="stylesheet" href="/Reviews.css">
           <title>Reviews</title>
       </head>
 
@@ -37,7 +37,7 @@
 
           </main>
 
-          <script src="/js/15 Projects/Reviews.js">
+          <script src="/Reviews.js">
           
           </script>
           
